<resources>
    <string name="app_name">Starwars</string>
    <string name="teste">teste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk es teste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk e teste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk eteste teste e te stse tes iseeuj hshfefeoisj eo teo sei ewi wop etgi r[pti w[ei rew[ rew[prie eti ti wep irew rskjf sdjf qajrflasjes ja;ej sejk e</string>
    <string name="episodio">Episodio:</string>
    <string name="director">Director:</string>
    <string name="realease_year">Realease Year:</string>
    <string name="release">Release</string>
    <string name="producter_s">Producter(s)</string>
    <string name="detail">Detail</string>
</resources>