<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/black"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginEnd="10dp"
                android:src="@drawable/starwarslogo" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/titulo_recebe_detalhes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/toolbar"
            tools:text="titulo_recebe_detalhes" />

        <ImageView
            android:id="@+id/imagem_recebe_detalhes"
            android:layout_width="150dp"
            android:layout_height="200dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="15dp"
            android:background="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titulo_recebe_detalhes" />

        <TextView
            android:id="@+id/titulo_release_fixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="2dp"
            android:text="@string/release"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imagem_recebe_detalhes"
            app:layout_constraintTop_toTopOf="@+id/imagem_recebe_detalhes" />

        <TextView
            android:id="@+id/data_recebe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxEms="10"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/imagem_recebe_detalhes"
            app:layout_constraintTop_toBottomOf="@+id/titulo_release_fixo"
            tools:text="17/05/1980" />

        <TextView
            android:id="@+id/titulo_director_fixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/director"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imagem_recebe_detalhes"
            app:layout_constraintTop_toBottomOf="@id/data_recebe" />

        <TextView
            android:id="@+id/diretor_recebe_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxEms="14"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/imagem_recebe_detalhes"
            app:layout_constraintTop_toBottomOf="@+id/titulo_director_fixo"
            tools:text="Irvin Kershnner" />

        <TextView
            android:id="@+id/titulo_producter_fixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:maxEms="14"
            android:text="@string/producter_s"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imagem_recebe_detalhes"
            app:layout_constraintTop_toBottomOf="@id/diretor_recebe_detalhes" />

        <TextView
            android:id="@+id/producter_recebe_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxEms="14"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/imagem_recebe_detalhes"
            app:layout_constraintTop_toBottomOf="@id/titulo_producter_fixo"
            tools:text="Gary Kurtz, Rick McCallum" />

        <TextView
            android:id="@+id/titulo_episode_fixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/episodio"
            android:textColor="@color/black"
            android:textSize="17sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imagem_recebe_detalhes"
            app:layout_constraintTop_toBottomOf="@id/producter_recebe_detalhes" />

        <TextView
            android:id="@+id/episode_recebe_detalhes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:textColor="@color/black"
            android:textSize="13sp"
            app:layout_constraintStart_toEndOf="@id/imagem_recebe_detalhes"
            app:layout_constraintTop_toBottomOf="@id/titulo_episode_fixo"
            tools:text="5" />


        <!--    Textos sobre-->
        <TextView
            android:id="@+id/text_sobre_recebe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:maxEms="15"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imagem_recebe_detalhes"
            tools:text="@string/teste" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>