<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageCard_recebe"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/texto_titulo_recebe"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:maxEms="10"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/imageCard_recebe"
            app:layout_constraintTop_toTopOf="@id/imageCard_recebe"
            tools:text="The Phantom Menace" />

        <TextView
            android:id="@+id/texto_episodio_fixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="3dp"
            android:text="@string/episodio"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/imageCard_recebe"
            app:layout_constraintTop_toBottomOf="@+id/texto_titulo_recebe" />

        <TextView
            android:id="@+id/texto_episodio_recebe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="3dp"
            android:maxEms="10"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/texto_episodio_fixo"
            app:layout_constraintTop_toBottomOf="@+id/texto_titulo_recebe"
            tools:text="1" />

        <ImageView
            android:id="@+id/icon_movie"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/movie_icon"
            app:layout_constraintStart_toEndOf="@id/imageCard_recebe"
            app:layout_constraintTop_toBottomOf="@+id/texto_episodio_fixo" />

        <TextView
            android:id="@+id/nome_diretor_fixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="7dp"
            android:text="@string/director"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/icon_movie"
            app:layout_constraintTop_toBottomOf="@+id/texto_episodio_fixo" />

        <TextView
            android:id="@+id/nome_diretor_recebe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="7dp"
            android:maxEms="10"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/nome_diretor_fixo"
            app:layout_constraintTop_toBottomOf="@+id/texto_episodio_fixo"
            tools:text="George Lucas" />

        <ImageView
            android:id="@+id/icon_calendario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/calendar_icon"
            app:layout_constraintStart_toEndOf="@id/imageCard_recebe"
            app:layout_constraintTop_toBottomOf="@+id/nome_diretor_recebe" />

        <TextView
            android:id="@+id/nome_ano_fixo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="13dp"
            android:text="@string/realease_year"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/icon_calendario"
            app:layout_constraintTop_toBottomOf="@+id/nome_diretor_recebe" />

        <TextView
            android:id="@+id/nome_ano_recebe"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="13dp"
            android:maxEms="10"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@id/nome_ano_fixo"
            app:layout_constraintTop_toBottomOf="@+id/nome_diretor_recebe"
            tools:text="1999" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>